objects/sixsense__X6sense_Contact_Score__c.object
<CustomObject>
    <description>Custom object to hold the 6sense Contact Score data.</description>
    <fields>
        <fullName>sixsense__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>6sense Predictive Intelligence - Contacts</relationshipLabel>
        <relationshipName>X6sense_Contact_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sixsense__CompanyBuyingStage__c</fullName>
        <description>The buying stage of the parent account/company</description>
        <inlineHelpText>The buying stage of the parent account/company</inlineHelpText>
        <label>Company Buying Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__CompanyIntentScore__c</fullName>
        <label>Company Intent Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__CompanyProfileFit__c</fullName>
        <description>The profile fit of the parent account/company</description>
        <label>Company Profile Fit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__CompanyProfileScore__c</fullName>
        <label>Company Profile Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Company_6QA_Age_in_Days__c</fullName>
        <label>Company 6QA Age in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Company_6QA_End_Date__c</fullName>
        <label>Company 6QA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sixsense__Company_6QA_Start_Date__c</fullName>
        <label>Company 6QA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sixsense__Company_6QA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company 6QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sixsense__Company_ID__c</fullName>
        <description>Company ID</description>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Company_Numerical_Reach_Score__c</fullName>
        <label>Company Numerical Reach Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Company_Reach_Score__c</fullName>
        <label>Company Reach Score</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__ContactProductKey__c</fullName>
        <externalId>true</externalId>
        <label>ContactProductKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sixsense__Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>6sense Predictive Intelligence - Contacts</relationshipLabel>
        <relationshipName>X6sense_Contact_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sixsense__Grade__c</fullName>
        <label>Grade</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Intent_Score__c</fullName>
        <label>Intent Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Orphaned__c</fullName>
        <formula>OR(
            ISBLANK(sixsense__Contact_Id__c),
            NOT(CONTAINS(sixsense__ContactProductKey__c, sixsense__Contact_Id__c))
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orphaned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sixsense__ProductId__c</fullName>
        <label>Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Product_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>sixsense__X6sense_Product__c</referenceTo>
        <relationshipLabel>6sense Contact Scores</relationshipLabel>
        <relationshipName>X6sense_Contact_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sixsense__Product_Name__c</fullName>
        <description>Plain text name of the product related to this score.</description>
        <label>Product Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__ProfileScore__c</fullName>
        <label>Profile Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Profile_Fit__c</fullName>
        <label>Profile Fit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__QueuedForProcessing__c</fullName>
        <externalId>true</externalId>
        <label>Queued For Processing</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Reach_Score__c</fullName>
        <label>Reach Score</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Txn_Id__c</fullName>
        <label>Txn Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Updated__c</fullName>
        <label>Updated</label>
        <type>DateTime</type>
    </fields>
    <label>6sense Contact Score</label>
    <listViews>
        <fullName>sixsense__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>6sense Contact Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>